backend/error_log.txt
Message: Unexpected token 'catch'
Stack: C:\Users\HP\OneDrive\Desktop\clinic new life\backend\routes\medicalRecords.js:466
  } catch (error) {
    ^^^^^

SyntaxError: Unexpected token 'catch'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at Module.require (node:internal/modules/cjs/loader:1335:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\HP\OneDrive\Desktop\clinic new life\backend\test_require_v3.js:4:3)